integrate OAuth to swagger
